# residencia-mle-mlops

./: .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: fraud_retraining_dag.py
app/: main.py  schemas.py
deployment/: kind-cluster.yaml
deployment/gcp/: cloud_run.tf  cloud_sql.tf  gcs.tf
deployment/k8s/: api-configmap.yaml  api-deployment.yaml  api-hpa.yaml  api-secret.yaml  api-service.yaml
docker/: Dockerfile.api  Dockerfile.mlflow  docker-compose-airflow.yml  docker-compose.yml
docs/sprints/: sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-06.md  sprint-07.md  sprint-08.md  sprint-09.md  sprint-10.md  sprint-11.md  sprint-12.md
feature_store/: feature_store.yaml  features.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: fraud_api.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
notebooks/: 01_eda.ipynb
pipelines/: detect_drift.py  download_data.py  feature_engineering.py  materialize_features.py  register_model.py  train.py
tests/: conftest.py  test_api.py  test_drift.py  test_features.py  test_smoke.py
