[project]
name = "mlops-lab"
version = "0.1.0"
description = "End-to-end MLOps project — Credit Card Fraud Detection"
requires-python = ">=3.11"
dependencies = [
    # ML core
    "mlflow>=2.15.0,<3.0.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "imbalanced-learn>=0.12.0",
    # Artifact store (S3/MinIO)
    "boto3>=1.34.0",
    # API (Sprint 5+)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    # Config
    "python-dotenv>=1.0.0",
    # Dados
    "kaggle>=1.6.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PTH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "pipelines"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app", "pipelines"]
omit = ["tests/*"]
