[project]
name = "mlops-lab"
version = "0.1.0"
description = "End-to-end MLOps project — Credit Card Fraud Detection"
requires-python = ">=3.11"
dependencies = [
    # ML core
    "mlflow>=2.15.0,<3.0.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "imbalanced-learn>=0.12.0",
    # Artifact store (S3/MinIO)
    "boto3>=1.34.0",
    # API (Sprint 5+)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    # Config
    "python-dotenv>=1.0.0",
    # Dados
    "kaggle>=1.6.0",
    "matplotlib>=3.9.0",
    # Observabilidade (Sprint 7+)
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
    # Drift detection (Sprint 8+)
    "evidently>=0.4.0",
    # Feature Store (Sprint 9+)
    "feast>=0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.2.0",
    "httpx>=0.27.0",  # exigido pelo fastapi.testclient.TestClient
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PTH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# load_dotenv() precisa rodar antes de importar mlflow/boto3 — essas libs lêem
# variáveis de ambiente (credenciais, endpoint S3) no momento do import.
"app/main.py" = ["E402"]
"pipelines/train.py" = ["E402"]
"pipelines/register_model.py" = ["E402"]
"pipelines/feature_engineering.py" = ["E402"]
"pipelines/detect_drift.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app", "pipelines"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.coverage.run]
source = ["app", "pipelines"]
omit = ["tests/*"]
